@@ -13,7 +13,11 @@ with Magick++ itself.
 (5.4.2)<BR>
 <UL>
   <LI> TypeMetric class revamped to match current ImageMagick type metrics
-    definition.
+    definition.<BR>
+  <LI> Fixed possible stack corruption on some architectures when returning
+    Color as a string.<BR>
+  <LI> DrawableCompositeImage can be constructed based on an Image in memory
+    rather than just a filename.
 
 </UL>
 <p>
