@@ -6,6 +6,10 @@ with Magick++ itself.
 (5.4.2)
   * TypeMetric class revamped to match current ImageMagick type metrics
     definition.
+  * Fixed possible stack corruption on some architectures when returning
+    Color as a string.
+  * DrawableCompositeImage can be constructed based on an Image in memory
+    rather than just a filename.
 
 (5.4.1)
   * Fixed memory leak in Image::draw().
